# study-data-structure

./: .gitignore  README.md
chapter 00/: README.md
chapter 01/: README.md  test_1_1.c  test_1_2.c  test_1_3.c  test_1_5.c  test_1_9.c  train_1_1.c  train_1_2.c  train_1_3.c
chapter 01/test/: test_1_10.c  test_1_11.c  test_1_12.c  test_1_13.c  test_1_14.c  test_1_15.c  test_1_16.c  test_1_17.c  test_1_18.c  test_1_4.c  test_1_5.c  test_1_6.c  test_1_7.c  test_1_8.c  test_1_9.c
chapter 01/train/: train_1C_1.c  train_1C_2.c  train_1_2.c  train_1_4.c  train_1_5.c  train_1_6.c  train_1_7.c  train_1_8.c
chapter 02/: README.md
chapter 02/test/: test_2_10.c  test_2_11.c  test_2_12.c  test_2_13.c  test_2_2.c  test_2_3.c  test_2_4.c  test_2_5.c  test_2_6.c  test_2_7.c  test_2_8.c  test_2_9.c
chapter 02/train/: train_2_1.c  train_2_10.c  train_2_11.c  train_2_12.c  train_2_13.c  train_2_2.c  train_2_3.c  train_2_4.c  train_2_5.c  train_2_6.c  train_2_7.c  train_2_8.c  train_2_9.c
chapter 03/: README.md
chapter 03/test/: test_3_2.c  test_3_3.c  test_3_4.c  test_3_5.c  test_3_6.c  test_3_7.c  test_3_8.c  test_3_9.c
chapter 03/train/: train_3C_1.c  train_3_1.c  train_3_2.c  train_3_3.c  train_3_4.c  train_3_5.c  train_3_6.c  train_3_7.c
chapter 04/: README.md
chapter 04/test/test_4_1/: IntStack.h  test_4_1.c
chapter 04/train/: train_4_1.c
chapter 04/train/train_4_1/: train_4_1.c
chapter 04/train/train_4_1~3/: CMakeLists.txt  IntStack.c  train_4_1.c
chapter 05/: README.md
chapter 05/train/train_5_4/: CMakeLists.txt  train_5_4.c
(+11 files in other folders)
